<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asteroides</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Asteroides</string>
    <string name="btnJugar">Jugar</string>
    <string name="btnConfigurar">Configurar</string>
    <string name="btnAcerca">Acerca de...</string>
    <string name="btnSalir">Salir</string>
    <string name="menuConfig">Configuración</string>
    <string name="menuAcerca">Acerca de...</string>

</resources>
