<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Asteroides" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginBottom="20dip"
        android:textSize="10pt" />

    <Button
        android:id="@+id/btnJugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnJugar" />

    <Button
        android:id="@+id/btnConfigurar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnConfigurar" />

    <Button
        android:id="@+id/btnAcerca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAcerca" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSalir" />

</LinearLayout>
